syntax = "proto3";

package v2fly.core.common.protocol;
option csharp_namespace = "v2fly.Core.Common.Protocol";
option go_package = "github.com/robovpn/github.com/robovpn/v2fly_core/common/protocol";
option java_package = "com.v2fly.core.common.protocol";
option java_multiple_files = true;

enum SecurityType {
  UNKNOWN = 0;
  LEGACY = 1;
  AUTO = 2;
  AES128_GCM = 3;
  CHACHA20_POLY1305 = 4;
  NONE = 5;
  ZERO = 6;
}

message SecurityConfig {
  SecurityType type = 1;
}
