syntax = "proto3";

package v2fly.core.common.protocol;
option csharp_namespace = "v2fly.Core.Common.Protocol";
option go_package = "../v2fly_core/common/protocol";
option java_package = "com.v2fly.core.common.protocol";
option java_multiple_files = true;

import "common/net/address.proto";
import "common/protocol/user.proto";

message ServerEndpoint {
  v2fly.core.common.net.IPOrDomain address = 1;
  uint32 port = 2;
  repeated v2fly.core.common.protocol.User user = 3;
}
