syntax = "proto3";

package v2fly.core.proxy.loopback;
option csharp_namespace = "v2fly.Core.Proxy.Loopback";
option go_package = "github.com/robovpn/github.com/robovpn/v2fly_core/proxy/loopback";
option java_package = "com.v2fly.core.proxy.loopback";
option java_multiple_files = true;

import "common/protoext/extensions.proto";

message Config {
  option (v2fly.core.common.protoext.message_opt).type = "outbound";
  option (v2fly.core.common.protoext.message_opt).short_name = "loopback";

  string inbound_tag = 1;
}
